--- a/Dockerfiles/Dockerfile-py3.11-win64
+++ b/Dockerfiles/Dockerfile-py3.11-win64
@@ -1,25 +1,21 @@
-FROM ubuntu:22.04
+FROM ubuntu:23.10
 
 ENV DEBIAN_FRONTEND noninteractive
 
-ARG WINE_VERSION=winehq-staging
+ARG WINE_VERSION=staging
 ARG PYTHON_VERSION=3.11.9
-ARG PYINSTALLER_VERSION=5.13
+ARG PYINSTALLER_VERSION=6.6.0
 
-# we need wine for this all to work, so we'll use the PPA
-RUN set -x \
-    && dpkg --add-architecture i386 \
-    && apt-get update -qy \
-    && apt-get install --no-install-recommends -qfy apt-transport-https software-properties-common wget gpg-agent rename git \
-    && wget -nv https://dl.winehq.org/wine-builds/winehq.key \
-    && apt-key add winehq.key \
-    && add-apt-repository 'https://dl.winehq.org/wine-builds/ubuntu/' \
-    && apt-get update -qy \
-    && apt-get install --no-install-recommends -qfy $WINE_VERSION winbind cabextract \
-    && apt-get clean \
-    && wget -nv https://raw.githubusercontent.com/Winetricks/winetricks/master/src/winetricks \
-    && chmod +x winetricks \
-    && mv winetricks /usr/local/bin
+RUN apt-get update -y && \
+    apt-get install -y --install-recommends \
+        apt-transport-https \
+        software-properties-common \
+        ca-certificates \
+        wget gpg-agent rename git zip wine winbind cabextract xvfb winetricks
+
+RUN dpkg --add-architecture i386 && \
+    apt-get update -y && \
+    apt-get install -y --install-recommends wine32:i386
 
 # wine settings
 ENV WINEARCH win64
@@ -34,7 +30,7 @@ ENV PYPI_INDEX_URL=https://pypi.python.org/simple
 # install python in wine, using the msi packages to install, extracting
 # the files directly, since installing isn't running correctly.
 RUN set -x \
-    && winetricks win7 \
+    && winetricks win10 \
     && for msifile in `echo core dev exe lib path pip tcltk tools`; do \
         wget -nv "https://www.python.org/ftp/python/$PYTHON_VERSION/amd64/${msifile}.msi"; \
         wine msiexec /i "${msifile}.msi" /qb TARGETDIR=C:/Python311; \
