--- a/Dockerfiles/Dockerfile-py3.12-win64
+++ b/Dockerfiles/Dockerfile-py3.12-win64
@@ -1,9 +1,9 @@
-FROM ubuntu:23.10
+FROM ubuntu:24.04
 
 ENV DEBIAN_FRONTEND noninteractive
 
 ARG WINE_VERSION=staging
-ARG PYTHON_VERSION=3.11.9
+ARG PYTHON_VERSION=3.12.3
 ARG PYINSTALLER_VERSION=6.6.0
 
 RUN apt-get update -y && \
@@ -30,20 +30,20 @@ ENV PYPI_INDEX_URL=https://pypi.python.org/simple
 # install python in wine, using the msi packages to install, extracting
 # the files directly, since installing isn't running correctly.
 RUN set -x \
-    && winetricks win10 \
-    && for msifile in `echo core dev exe lib path pip tcltk tools`; do \
+    && winetricks win11 \
+    && for msifile in `echo core dev exe lib path pip tcltk`; do \
         wget -nv "https://www.python.org/ftp/python/$PYTHON_VERSION/amd64/${msifile}.msi"; \
-        wine msiexec /i "${msifile}.msi" /qb TARGETDIR=C:/Python311; \
+        wine msiexec /i "${msifile}.msi" /qb TARGETDIR=C:/Python312; \
         rm ${msifile}.msi; \
     done \
-    && cd /wine/drive_c/Python311 \
-    && echo 'wine '\''C:\Python311\python.exe'\'' "$@"' > /usr/bin/python \
-    && echo 'wine '\''C:\Python311\Scripts\easy_install.exe'\'' "$@"' > /usr/bin/easy_install \
-    && echo 'wine '\''C:\Python311\Scripts\pip.exe'\'' "$@"' > /usr/bin/pip \
-    && echo 'wine '\''C:\Python311\Scripts\pyinstaller.exe'\'' "$@"' > /usr/bin/pyinstaller \
-    && echo 'wine '\''C:\Python311\Scripts\pyupdater.exe'\'' "$@"' > /usr/bin/pyupdater \
+    && cd /wine/drive_c/Python312 \
+    && echo 'wine '\''C:\Python312\python.exe'\'' "$@"' > /usr/bin/python \
+    && echo 'wine '\''C:\Python312\Scripts\easy_install.exe'\'' "$@"' > /usr/bin/easy_install \
+    && echo 'wine '\''C:\Python312\Scripts\pip.exe'\'' "$@"' > /usr/bin/pip \
+    && echo 'wine '\''C:\Python312\Scripts\pyinstaller.exe'\'' "$@"' > /usr/bin/pyinstaller \
+    && echo 'wine '\''C:\Python312\Scripts\pyupdater.exe'\'' "$@"' > /usr/bin/pyupdater \
     && echo 'assoc .py=PythonScript' | wine cmd \
-    && echo 'ftype PythonScript=c:\Python311\python.exe "%1" %*' | wine cmd \
+    && echo 'ftype PythonScript=c:\Python312\python.exe "%1" %*' | wine cmd \
     && while pgrep wineserver >/dev/null; do echo "Waiting for wineserver"; sleep 1; done \
     && chmod +x /usr/bin/python /usr/bin/easy_install /usr/bin/pip /usr/bin/pyinstaller /usr/bin/pyupdater \
     && (pip install -U pip || true) \
